--- a/public_html/index.html
+++ b/public_html/index.html
@@ -184,8 +184,8 @@
                         <input type="email" class="form-control" placeholder="Enter Email"requried>                 
                     </div>
                     <div class="form-group col-sm-12">
-                        <textarea name="comment" id="comment" rows="6"   c
-                        lass="form-control" placeholder="Write Something"></textarea>
+                        <textarea name="comment" id="comment" rows="6"
+                        class="form-control" placeholder="Write Something"></textarea>
                     </div>
                     <div class="form-group col-sm-12 mt-3">
                         <input type="submit" value="Send Message" class="btn btn-outline-primary rounded">                  
