--- a/public_html/index.html
+++ b/public_html/index.html
@@ -30,9 +30,6 @@
                 <li class="item">
                     <a class="link" href="#contact">Contact</a>
                 </li>
-                <li class="item ml-md-3">
-                    <a href="components.html" class="btn btn-primary">Components</a>
-                </li>
             </ul>
             <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic">
                 <div class="hamburger-box">
@@ -175,7 +172,7 @@
             <p class="section-subtitle">How can you communicate?</p>
             <h6 class="section-title mb-5">Contact Me</h6>
             <!-- contact form -->
-            <form action="" class="contact-form col-md-10 col-lg-8 m-auto">
+            <form onsubmit="sendEmail()" class="contact-form col-md-10 col-lg-8 m-auto">
                 <div class="form-row">
                     <div class="form-group col-sm-6">
                         <input type="text" size="50" class="form-control" placeholder="Your Name" required>                 
@@ -193,6 +190,29 @@
                 </div>  
             </form><!-- end of contact form -->
         </div><!-- end of container -->
+        <script src="https://smtpjs.com/v3/smtp.js">
+        </script>
+<script>
+
+function sendEmail(){
+    Email.send({
+    Host : "smtp.elasticemail.com",
+    Port : "2525",
+    Username : "willypskahan@gmail.com",
+    Password : "6794D0C63796BA328CFF385C7C6A3A87B773",
+    To : 'skahanwilliam@gmail.com',
+    From : document.getElementById("email").value,
+    Subject : "New Contact Form Enquiry",
+    Body : "And this is the body"
+}).then(
+  message => alert(message)
+);
+
+}
+
+</script>
+
+
     </section><!-- end of contact section -->
 
     <!-- footer -->
@@ -200,12 +220,9 @@
         <footer class="footer">       
             <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="https://twitter.com/WSpark2120">William Skahan</a></p>
             <div class="social-links text-right m-auto ml-sm-auto">
-                <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-twitter-alt"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-pinterest-alt"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-instagram"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-rss"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100094621606325" class="link"><i class="ti-facebook"></i></a>
+                <a href="https://twitter.com/WSpark2120" class="link"><i class="ti-twitter-alt"></i></a>
+                <a href="https://www.instagram.com/willypskahan/" class="link"><i class="ti-instagram"></i></a>
             </div>
         </footer>
     </div> <!-- end of page footer -->
