--- a/public_html/index.html
+++ b/public_html/index.html
@@ -170,8 +170,12 @@
     <section class="section" id="contact">
         <div class="container text-center">
             <p class="section-subtitle">How can you communicate?</p>
-            <h6 class="section-title mb-5">Contact Me</h6>
+            <h6 class="section-title mb-5">Contact Me (currently down)</h6>
+            <p class="section-subtitle">Feel free to email me at willypskahan@gmail.com well the system is down. I appreicate your patience.</p>
             <!-- contact form -->
+
+            <br>
+            <br>
             <form onsubmit="sendEmail()" class="contact-form col-md-10 col-lg-8 m-auto">
                 <div class="form-row">
                     <div class="form-group col-sm-6">
