changes and fixes

--- a/links/index.html
+++ b/links/index.html
@@ -48,13 +48,9 @@
         <div class="overlay"></div>
         <div class="header-content container">
             <h1 class="header-title">
-                <span class="up">HI!</span>
-                <span class="down">I am William Skahan</span>
-            </h1>
-            <p class="header-subtitle">Links Page!</p>            
-
-            <a href="/#portfolio">
-            <button class="btn btn-primary">Visit My Works</button></a>
+                <span class="up">Link's Page</span>
+            </h1>           
+            <p class="header-subtitle">Here, you can find all my links to the current projects I am working on.</p> 
 
             <a href="/">
             <button class="btn btn-primary">Home Page</button></a>
