--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
             <a class="logo" href="#">William Skahan</a>         
             <ul class="nav">
                 <li class="item">
-                    <a class="link" href="#home">Home</a>
+                    <a class="link" href="/">Home</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#about">About</a>
+                    <a class="link" href="/#about">About</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#portfolio">Portfolio</a>
+                    <a class="link" href="/#portfolio">Portfolio</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#contact">Contact</a>
+                    <a class="link" href="/#contact">Contact</a>
                 </li>
                 <li class="item">
                     <a class="link" href="/links">Links</a>
@@ -50,11 +50,8 @@
                 <span class="up">HI!</span>
                 <span class="down">I am William Skahan</span>
             </h1>
-            <p class="header-subtitle">Video & Software Entrepreneur</p>            
-
-            <a href="/public_html/#portfolio">
-            <button class="btn btn-primary">Visit My Works</button></a>
-
+            <p class="header-subtitle">Video & Software Entrepreneur</p>         
+            
             <a href="/links/">
                 <button class="btn btn-primary">My Links</button></a>
         </div>              
@@ -94,7 +91,7 @@
                         <div class="body">
                             <img src="assets/imgs/pencil-case.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" class="icon">
                             <h6 class="title">Coding</h6>
-                            <p class="subtitle">Coding is on my favorite things to do - I code Discord Bots, and Websites mostly. Although, nothing is out of my field of view.</p>
+                            <p class="subtitle">Coding is on my favorite things to do, I enjoy making websites, and Discord bots.</p>
                         </div>
                     </div>
                 </div>
@@ -112,7 +109,7 @@
                         <div class="body">
                             <img src="assets/imgs/toolbox.svg" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page" class="icon">
                             <h6 class="title">Video Games</h6>
-                            <p class="subtitle">Of course... you gotta live video games man! I enjoy Fortnite, and Minecraft.</p>
+                            <p class="subtitle">Of course... you gotta love video games man! I enjoy Fortnite, and Minecraft.</p>
                         </div>
                     </div>
                 </div>
@@ -128,50 +125,6 @@
             </div><!-- end of row -->
         </div>
     </section><!-- end of service section -->
-
-    <!-- portfolio section -->
-    <section class="section" id="portfolio">
-        <div class="container text-center">
-            <p class="section-subtitle">What I Did?</p>
-            <h6 class="section-title mb-6">Portfolio</h6>
-            <!-- row -->
-            <div class="row">
-                <div class="col-md-4">
-                    <a href="https://videos.williamskahan.com/" class="portfolio-card">
-                        <img src="assets/imgs/folio-1.jpg" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">    
-                        <span class="portfolio-card-overlay">
-                            <span class="portfolio-card-caption">
-                                <h4>Video Projects</h5>
-                                <p class="font-weight-normal">Tap here to get a link to my video projects.</p>
-                            </span>                         
-                        </span>                     
-                    </a>
-                </div>
-                <div class="col-md-4">
-                    <a href="#" class="portfolio-card">
-                        <img class="portfolio-card-img" src="assets/imgs/folio-2.jpg" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
-                        <span class="portfolio-card-overlay">
-                            <span class="portfolio-card-caption">
-                                <h4>Web Designing</h5>
-                                <p class="font-weight-normal">Tap here to get a link to my web projects.</p>
-                            </span>                         
-                        </span>                         
-                    </a>
-                </div>
-                <div class="col-md-4">
-                    <a href="#" class="portfolio-card">
-                        <img class="portfolio-card-img" src="assets/imgs/folio-3.jpg" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">    
-                        <span class="portfolio-card-overlay">
-                            <span class="portfolio-card-caption">
-                                <h4>Discord Bot's</h5>
-                                <p class="font-weight-normal">Tap here to get a link to my Discord Bots.</p>
-                            </span>                         
-                        </span>                     
-                    </a>
-                </div>
-            </div><!-- end of row -->
-        </div><!-- end of container -->
-    </section> <!-- end of portfolio section -->
 
 
     <!-- contact section -->
